syntax = "proto3";
package coreum.asset.ft.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/CoreumFoundation/coreum/v4/x/asset/ft/types";

// Feature defines possible features of fungible token.
enum Feature {
  minting = 0;
  burning = 1;
  freezing = 2;
  whitelisting = 3;
  ibc = 4;
  block_smart_contracts = 5;
  clawback = 6;
  extension = 7;
  block_dex = 8;
}

// Definition defines the fungible token settings to store.
message Definition {
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.equal) = false;
  string denom = 1;
  string issuer = 2;
  repeated Feature features = 3;
  // burn_rate is a number between 0 and 1 which will be multiplied by send amount to determine
  // burn_amount. This value will be burnt on top of the send amount.
  string burn_rate = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec"
  ];
  // send_commission_rate is a number between 0 and 1 which will be multiplied by send amount to determine
  // amount sent to the token admin account.
  string send_commission_rate = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec"
  ];
  uint32 version = 6;
  string uri = 7 [(gogoproto.customname) = "URI"];
  string uri_hash = 8 [(gogoproto.customname) = "URIHash"];
  string extension_cw_address = 9 [(gogoproto.customname) = "ExtensionCWAddress"];
  string admin = 10;
}

// Token is a full representation of the fungible token.
message Token {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;
  string denom = 1;
  string issuer = 2;
  string symbol = 3;
  string subunit = 4;
  uint32 precision = 5;
  string description = 6;
  bool globally_frozen = 7;
  repeated Feature features = 8;
  // burn_rate is a number between 0 and 1 which will be multiplied by send amount to determine
  // burn_amount. This value will be burnt on top of the send amount.
  string burn_rate = 9 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec"
  ];
  // send_commission_rate is a number between 0 and 1 which will be multiplied by send amount to determine
  // amount sent to the token admin account.
  string send_commission_rate = 10 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec"
  ];
  uint32 version = 11;
  string uri = 12 [(gogoproto.customname) = "URI"];
  string uri_hash = 13 [(gogoproto.customname) = "URIHash"];
  string extension_cw_address = 14 [(gogoproto.customname) = "ExtensionCWAddress"];
  string admin = 15;
  DEXSettings dex_settings = 16 [(gogoproto.customname) = "DEXSettings"];
}

// DelayedTokenUpgradeV1 is executed by the delay module when it's time to enable IBC.
message DelayedTokenUpgradeV1 {
  string denom = 1;
}

// TokenUpgradeV1Status defines the current status of the v1 token migration.
message TokenUpgradeV1Status {
  bool ibc_enabled = 1;
  google.protobuf.Timestamp start_time = 2 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false
  ];
  google.protobuf.Timestamp end_time = 3 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false
  ];
}

// TokenUpgradeStatuses defines all statuses of the token migrations.
message TokenUpgradeStatuses {
  TokenUpgradeV1Status v1 = 1;
}

// DEXSettings defines the token settings of the dex.
message DEXSettings {
  // unified_ref_amount is the approximate amount you need to by 1USD, used to define the price tick size
  string unified_ref_amount = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec"
  ];
}
